thirdparty/unidac/Include/Delphi28/Win32/LiteCallVirtual.hpp


struct TSQLite3Context;

class DELPHICLASS TCustomSQLite3API;

class DELPHICLASS TSQLite3API;



struct DECLSPEC_DRECORD TSQLite3Context
{
public:
	TFuncDef *pFunc;
};



typedef void * pSQLite3;


typedef void * pSQLite3Context;


typedef void * pSQLite3Value;


typedef void * pSQLite3Backup;


typedef TSQLite3Context *pContext;



typedef void * __cdecl (*Tsqlite3_malloc)(int n);


typedef int __cdecl (*Tsqlite3_open)(char * filename, /* out */ void * &ppDb);


typedef int __cdecl (*Tsqlite3_open16)(System::WideChar * filename, /* out */ void * &ppDb);


typedef int __cdecl (*Tsqlite3_open_v2)(char * filename, /* out */ void * &ppDb, int flags, char * zVfs);


typedef int __cdecl (*Tsqlite3_close)(void * pDb);


typedef int __cdecl (*Tsqlite3_errcode)(void * pDb);


typedef int __cdecl (*Tsqlite3_extended_errcode)(void * pDb);


typedef int __cdecl (*Tsqlite3_extended_result_codes)(void * pDb, int onoff);


typedef char * __cdecl (*Tsqlite3_errmsg)(void * pDb);


typedef __int64 __cdecl (*Tsqlite3_last_insert_rowid)(void * pDb);


typedef int __cdecl (*Tsqlite3_changes)(void * pDb);


typedef int __cdecl (*Tsqlite3_prepare_v2)(void * db, char * zSql, int nByte, /* out */ void * &ppStmt, /* out */ void * &pzTail);


typedef int __cdecl (*Tsqlite3_step)(void * pStmt);


typedef int __cdecl (*Tsqlite3_reset)(void * pStmt);


typedef int __cdecl (*Tsqlite3_finalize)(void * pStmt);


typedef int __cdecl (*Tsqlite3_column_count)(void * pStmt);


typedef int __cdecl (*Tsqlite3_column_type)(void * pStmt, int iCol);


typedef char * __cdecl (*Tsqlite3_column_name)(void * pStmt, int iCol);


typedef char * __cdecl (*Tsqlite3_column_origin_name)(void * pStmt, int iCol);


typedef char * __cdecl (*Tsqlite3_column_table_name)(void * pStmt, int iCol);


typedef char * __cdecl (*Tsqlite3_column_database_name)(void * pStmt, int iCol);


typedef char * __cdecl (*Tsqlite3_column_decltype)(void * pStmt, int iCol);


typedef int __cdecl (*Tsqlite3_table_column_metadata)(void * pDb, void * zDbName, void * zTableName, void * zColumnName, /* out */ void * &pzDataType, /* out */ void * &pzCollSeq, /* out */ int &pNotNull, /* out */ int &pPrimaryKey, /* out */ int &pAutoinc);


typedef void * __cdecl (*Tsqlite3_column_blob)(void * pStmt, int iCol);


typedef int __cdecl (*Tsqlite3_column_bytes)(void * pStmt, int iCol);


typedef double __cdecl (*Tsqlite3_column_double)(void * pStmt, int iCol);


typedef int __cdecl (*Tsqlite3_column_int)(void * pStmt, int iCol);


typedef __int64 __cdecl (*Tsqlite3_column_int64)(void * pStmt, int iCol);


typedef char * __cdecl (*Tsqlite3_column_text)(void * pStmt, int iCol);


typedef int __cdecl (*Tsqlite3_bind_parameter_count)(void * pStmt);


typedef char * __cdecl (*Tsqlite3_bind_parameter_name)(void * pStmt, int Index);


typedef int __cdecl (*Tsqlite3_bind_blob)(void * pStmt, int Index, void * pBlob, int Size, void * pDestrType);


typedef int __cdecl (*Tsqlite3_bind_zeroblob)(void * pStmt, int Index, int Size);


typedef int __cdecl (*Tsqlite3_bind_double)(void * pStmt, int Index, double Value);


typedef int __cdecl (*Tsqlite3_bind_int)(void * pStmt, int Index, int Value);


typedef int __cdecl (*Tsqlite3_bind_int64)(void * pStmt, int Index, __int64 Value);


typedef int __cdecl (*Tsqlite3_bind_null)(void * pStmt, int Index);


typedef int __cdecl (*Tsqlite3_bind_text)(void * pStmt, int Index, char * Value, int Size, void * pDestrType);


typedef void __cdecl (*Tsqlite3_result_blob)(void * pContext, void * pBlob, int Size, void * pDestrType);


typedef void __cdecl (*Tsqlite3_result_double)(void * pContext, double Value);


typedef void __cdecl (*Tsqlite3_result_error)(void * pContext, void * pMsg, int Size);


typedef void __cdecl (*Tsqlite3_result_error16)(void * pContext, void * pMsg, int Size);


typedef void __cdecl (*Tsqlite3_result_error_toobig)(void * pContext);


typedef void __cdecl (*Tsqlite3_result_error_nomem)(void * pContext);


typedef void __cdecl (*Tsqlite3_result_error_code)(void * pContext, int ErrorCode);


typedef void __cdecl (*Tsqlite3_result_int)(void * pContext, int Value);


typedef void __cdecl (*Tsqlite3_result_int64)(void * pContext, __int64 Value);


typedef void __cdecl (*Tsqlite3_result_null)(void * pContext);


typedef void __cdecl (*Tsqlite3_result_text)(void * pContext, void * pStr, int Size, void * pDestrType);


typedef void __cdecl (*Tsqlite3_result_text16)(void * pContext, void * pStr, int Size, void * pDestrType);


typedef void __cdecl (*Tsqlite3_result_text16le)(void * pContext, void * pStr, int Size, void * pDestrType);


typedef void __cdecl (*Tsqlite3_result_text16be)(void * pContext, void * pStr, int Size, void * pDestrType);


typedef void __cdecl (*Tsqlite3_result_value)(void * pContext, void * Value);


typedef void __cdecl (*Tsqlite3_result_zeroblob)(void * pContext, int Size);


typedef void * __cdecl (*Tsqlite3_value_blob)(void * pValue);


typedef int __cdecl (*Tsqlite3_value_bytes)(void * pValue);


typedef int __cdecl (*Tsqlite3_value_bytes16)(void * pValue);


typedef double __cdecl (*Tsqlite3_value_double)(void * pValue);


typedef int __cdecl (*Tsqlite3_value_int)(void * pValue);


typedef __int64 __cdecl (*Tsqlite3_value_int64)(void * pValue);


typedef void * __cdecl (*Tsqlite3_value_text)(void * pValue);


typedef void * __cdecl (*Tsqlite3_value_text16)(void * pValue);


typedef int __cdecl (*Tsqlite3_value_type)(void * pValue);


typedef void * __cdecl (*Tsqlite3_user_data)(void * pContext);


typedef char * __cdecl (*Tsqlite3_libversion)(void);


typedef int __cdecl (*Tsqlite3_libversion_number)(void);


typedef int __cdecl (*Tsqlite3_create_collation)(void * pSQLite, char * zName, int eTextRep, void * userData, void * func);


typedef int __cdecl (*Tsqlite3_create_collation16)(void * pSQLite, System::WideChar * zName, int eTextRep, void * userData, void * func);


typedef int __cdecl (*Tsqlite3_create_function)(void * pSQLite, char * zFunctionName, int nArg, int eTextRep, void * pApp, void * xFunc, void * xStep, void * xFinal);


typedef int __cdecl (*Tsqlite3_create_function16)(void * pSQLite, System::WideChar * zFunctionName, int nArg, int eTextRep, void * pApp, void * xFunc, void * xStep, void * xFinal);


typedef int __cdecl (*Tsqlite3_create_function_v2)(void * pSQLite, char * zFunctionName, int nArg, int eTextRep, void * pApp, void * xFunc, void * xStep, void * xFinal, void * xDestroy);


typedef int __cdecl (*Tsqlite3_overload_function)(void * pSQLite, char * zFunctionName, int nArg);


typedef int __cdecl (*Tsqlite3_create_module)(void * pSQLite, void * zName, void * p, void * pClientData);


typedef int __cdecl (*Tsqlite3_create_module_v2)(void * pSQLite, void * zName, void * p, void * pClientData, void * xDestroy);


typedef int __cdecl (*Tsqlite3_declare_vtab)(void * pSQLite, const void * zCreateTable);


typedef int __cdecl (*Tsqlite3_vtab_config)(void * pSQLite, int op, int flag);


typedef int __cdecl (*Tsqlite3_enable_shared_cache)(int Value);


typedef int __cdecl (*Tsqlite3_enable_load_extension)(void * pSQLite, int OnOff);


typedef int __cdecl (*Tsqlite3_busy_timeout)(void * pSQLite, int MilliSeconds);


typedef int __cdecl (*Tsqlite3_busy_handler)(void * pSQLite, void * func, void * userData);


typedef int __cdecl (*Tsqlite3_key)(void * pSQLite, char * key, int size);


typedef int __cdecl (*Tsqlite3_key_v2)(void * pSQLite, char * zDbName, char * key, int size);


typedef int __cdecl (*Tsqlite3_rekey)(void * pSQLite, char * newkey, int size);


typedef int __cdecl (*Tsqlite3_rekey_v2)(void * pSQLite, char * zDbName, char * newkey, int size);


typedef void * __cdecl (*Tsqlite3_backup_init)(void * pDest, char * zDestName, void * pSource, char * zSourceName);


typedef int __cdecl (*Tsqlite3_backup_step)(void * p, int nPage);


typedef int __cdecl (*Tsqlite3_backup_finish)(void * p);


typedef int __cdecl (*Tsqlite3_backup_remaining)(void * p);


typedef int __cdecl (*Tsqlite3_backup_pagecount)(void * p);


typedef int __cdecl (*Tsqlite3_db_release_memory)(void * pDb);


typedef int __cdecl (*Tsqlite3_db_readonly)(void * pDb, char * zDbName);


typedef int __cdecl (*Tsqlite3_limit)(void * pDb, int id, int newVal);


typedef char * __cdecl (*Tsqlite3_uri_parameter)(char * zFilename, char * zParam);


typedef void __cdecl (*Tsqlite3_interrupt)(void * pDb);

extern DELPHI_PACKAGE System::Syncobjs::TCriticalSection* LockInit;