thirdparty/unidac/Source/LiteCallVirtual.pas


  Tsqlite3_result_error_nomem = procedure(
    pContext: pSQLite3Context
  ); cdecl;

  Tsqlite3_result_error_code = procedure(
    pContext: pSQLite3Context; ErrorCode: Integer
  ); cdecl;

  Tsqlite3_result_int = procedure(
    pContext: pSQLite3Context; Value: Integer
  ); cdecl;

  Tsqlite3_result_int64 = procedure(
    pContext: pSQLite3Context; Value: Int64
  ); cdecl;

  Tsqlite3_result_null = procedure(
    pContext: pSQLite3Context
  ); cdecl;

  Tsqlite3_result_text = procedure(
    pContext: pSQLite3Context; pStr: IntPtr; Size: Integer; pDestrType: IntPtr
  ); cdecl;

  Tsqlite3_result_text16 = procedure(
    pContext: pSQLite3Context; pStr: IntPtr; Size: Integer; pDestrType: IntPtr
  ); cdecl;

  Tsqlite3_result_text16le = procedure(
    pContext: pSQLite3Context; pStr: IntPtr; Size: Integer; pDestrType: IntPtr
  ); cdecl;

  Tsqlite3_result_text16be = procedure(
    pContext: pSQLite3Context; pStr: IntPtr; Size: Integer; pDestrType: IntPtr
  ); cdecl;

  Tsqlite3_result_value = procedure(
    pContext: pSQLite3Context; Value: pSQLite3Value
  ); cdecl;

  Tsqlite3_result_zeroblob = procedure(
    pContext: pSQLite3Context; Size: Integer
  ); cdecl;

  Tsqlite3_value_blob = function(
    pValue: IntPtr
  ): IntPtr; cdecl;

  Tsqlite3_value_bytes = function(
    pValue: IntPtr
  ): Integer; cdecl;

  Tsqlite3_value_bytes16 = function(
    pValue: IntPtr
  ): Integer; cdecl;

  Tsqlite3_value_double = function(
    pValue: IntPtr
  ): Double; cdecl;

  Tsqlite3_value_int = function(
    pValue: IntPtr
  ): Integer; cdecl;

  Tsqlite3_value_int64 = function(
    pValue: IntPtr
  ): Int64; cdecl;

  Tsqlite3_value_text = function(
    pValue: IntPtr
  ): IntPtr; cdecl;

  Tsqlite3_value_text16 = function(
    pValue: IntPtr
  ): IntPtr; cdecl;

  Tsqlite3_value_type = function(
    pValue: IntPtr
  ): Integer; cdecl;

  Tsqlite3_user_data = function(
    pContext: pSQLite3Context
  ): IntPtr; cdecl;

  Tsqlite3_libversion = function(
  ): PAnsiChar; cdecl;

  Tsqlite3_libversion_number = function(
  ): Integer; cdecl;

  Tsqlite3_create_collation = function(
    pSQLite: pSQLite3; zName: PAnsiChar; eTextRep: Integer; userData: IntPtr; func: IntPtr
  ): Integer; cdecl;

  Tsqlite3_create_collation16 = function(
    pSQLite: pSQLite3; zName: PWideChar; eTextRep: Integer; userData: IntPtr; func: IntPtr
  ): Integer; cdecl;

  Tsqlite3_create_function = function(
    pSQLite: pSQLite3; zFunctionName: PAnsiChar; nArg: Integer; eTextRep: Integer; pApp: IntPtr; xFunc: IntPtr; xStep: IntPtr; xFinal: IntPtr
  ): Integer; cdecl;

  Tsqlite3_create_function16 = function(
    pSQLite: pSQLite3; zFunctionName: PWideChar; nArg: Integer; eTextRep: Integer; pApp: IntPtr; xFunc: IntPtr; xStep: IntPtr; xFinal: IntPtr
  ): Integer; cdecl;

  Tsqlite3_create_function_v2 = function(
    pSQLite: pSQLite3; zFunctionName: PAnsiChar; nArg: Integer; eTextRep: Integer; pApp: IntPtr; xFunc: IntPtr; xStep: IntPtr; xFinal: IntPtr; xDestroy: IntPtr
  ): Integer; cdecl;

  Tsqlite3_overload_function = function(
    pSQLite: pSQLite3; zFunctionName: PAnsiChar; nArg: Integer
  ): Integer; cdecl;

  Tsqlite3_create_module = function(
    pSQLite: pSQLite3; zName: IntPtr; p: IntPtr; pClientData: IntPtr
  ): Integer; cdecl;

  Tsqlite3_create_module_v2 = function(
    pSQLite: pSQLite3; zName: IntPtr; p: IntPtr; pClientData: IntPtr; xDestroy: IntPtr
  ): Integer; cdecl;

  Tsqlite3_declare_vtab = function(
    pSQLite: pSQLite3; const zCreateTable: IntPtr
  ): Integer; cdecl;

  Tsqlite3_vtab_config = function(
    pSQLite: pSQLite3; op: Integer; flag: Integer
  ): Integer; cdecl;

  Tsqlite3_enable_shared_cache = function(
    Value: Integer
  ): Integer; cdecl;

  Tsqlite3_enable_load_extension = function(
    pSQLite: pSQLite3; OnOff: Integer
  ): Integer; cdecl;

  Tsqlite3_busy_timeout = function(
    pSQLite: pSQLite3; MilliSeconds: Integer
  ): Integer; cdecl;

  Tsqlite3_busy_handler = function(
    pSQLite: pSQLite3; func: IntPtr; userData: IntPtr
  ): Integer; cdecl;

  Tsqlite3_key = function(
    pSQLite: pSQLite3; key: PAnsiChar; size: Integer
  ): Integer; cdecl;

  Tsqlite3_key_v2 = function(
    pSQLite: pSQLite3; zDbName, key: PAnsiChar; size: Integer
  ): Integer; cdecl;

  Tsqlite3_rekey = function(
    pSQLite: pSQLite3; newkey: PAnsiChar; size: Integer
  ): Integer; cdecl;

  Tsqlite3_rekey_v2 = function(
    pSQLite: pSQLite3; zDbName, newkey: PAnsiChar; size: Integer
  ): Integer; cdecl;

  Tsqlite3_backup_init = function(
    pDest: pSQLite3; zDestName: PAnsiChar;
    pSource: pSQLite3; zSourceName: PAnsiChar
  ): pSQLite3Backup; cdecl;

  Tsqlite3_backup_step = function(
    p: pSQLite3Backup; nPage: Integer
  ): Integer; cdecl;

  Tsqlite3_backup_finish = function(
    p: pSQLite3Backup
  ): Integer; cdecl;

  Tsqlite3_backup_remaining = function(
    p: pSQLite3Backup
  ): Integer; cdecl;

  Tsqlite3_backup_pagecount = function(
    p: pSQLite3Backup
  ): Integer; cdecl;

  Tsqlite3_db_release_memory = function(
    pDb: pSQLite3
  ): Integer; cdecl;

  Tsqlite3_db_readonly = function(
    pDb: pSQLite3; zDbName: PAnsiChar
  ): Integer; cdecl;

  Tsqlite3_limit = function(
    pDb: pSQLite3;
    id: integer;
    newVal: Integer
  ): Integer; cdecl;

  Tsqlite3_uri_parameter = function(
    zFilename: PAnsiChar;
    zParam: PAnsiChar
  ): PAnsiChar; cdecl;

  Tsqlite3_interrupt = procedure(
    pDb: pSQLite3
  ); cdecl;

  TCustomSQLite3API = class
  private
  {$IFDEF MSWINDOWS}
    hLiteLib: HMODULE;
  {$ENDIF}
  {$IFDEF POSIX}
    hLiteLib: NativeUInt;
  {$ENDIF}
  {$IFDEF UNIX}
    hLiteLib: IntPtr;
  {$ENDIF}

    FClientLibrary: string;
    FDirect: boolean;
    FInitialized: Boolean;

    procedure LoadClientLibrary;
    procedure UnLoadClientLibrary;

  public
    sqlite3_malloc: Tsqlite3_malloc;
    sqlite3_open: Tsqlite3_open;
    sqlite3_open16: Tsqlite3_open16;
    sqlite3_open_v2: Tsqlite3_open_v2;
    sqlite3_close: Tsqlite3_close;
    sqlite3_errcode: Tsqlite3_errcode;
    sqlite3_extended_errcode: Tsqlite3_extended_errcode;
    sqlite3_extended_result_codes: Tsqlite3_extended_result_codes;
    sqlite3_errmsg: Tsqlite3_errmsg;
    sqlite3_last_insert_rowid: Tsqlite3_last_insert_rowid;
    sqlite3_changes: Tsqlite3_changes;
    sqlite3_prepare_v2: Tsqlite3_prepare_v2;
    sqlite3_step: Tsqlite3_step;
    sqlite3_reset: Tsqlite3_reset;
    sqlite3_finalize: Tsqlite3_finalize;
    sqlite3_column_count: Tsqlite3_column_count;
    sqlite3_column_type: Tsqlite3_column_type;
    sqlite3_column_name: Tsqlite3_column_name;
    sqlite3_column_origin_name: Tsqlite3_column_origin_name;
    sqlite3_column_table_name: Tsqlite3_column_table_name;
    sqlite3_column_database_name: Tsqlite3_column_database_name;
    sqlite3_column_decltype: Tsqlite3_column_decltype;
    sqlite3_table_column_metadata: Tsqlite3_table_column_metadata;
    sqlite3_column_blob: Tsqlite3_column_blob;
    sqlite3_column_bytes: Tsqlite3_column_bytes;
    sqlite3_column_double: Tsqlite3_column_double;
    sqlite3_column_int: Tsqlite3_column_int;
    sqlite3_column_int64: Tsqlite3_column_int64;
    sqlite3_column_text: Tsqlite3_column_text;
    sqlite3_bind_parameter_count: Tsqlite3_bind_parameter_count;
    sqlite3_bind_parameter_name: Tsqlite3_bind_parameter_name;
    sqlite3_bind_blob: Tsqlite3_bind_blob;
    sqlite3_bind_zeroblob: Tsqlite3_bind_zeroblob;
    sqlite3_bind_double: Tsqlite3_bind_double;
    sqlite3_bind_int: Tsqlite3_bind_int;
    sqlite3_bind_int64: Tsqlite3_bind_int64;
    sqlite3_bind_null: Tsqlite3_bind_null;
    sqlite3_bind_text: Tsqlite3_bind_text;
    sqlite3_result_blob: Tsqlite3_result_blob;
    sqlite3_result_double: Tsqlite3_result_double;
    sqlite3_result_error: Tsqlite3_result_error;
    sqlite3_result_error16: Tsqlite3_result_error16;
    sqlite3_result_error_toobig: Tsqlite3_result_error_toobig;
    sqlite3_result_error_nomem: Tsqlite3_result_error_nomem;
    sqlite3_result_error_code: Tsqlite3_result_error_code;
    sqlite3_result_int: Tsqlite3_result_int;
    sqlite3_result_int64: Tsqlite3_result_int64;
    sqlite3_result_null: Tsqlite3_result_null;
    sqlite3_result_text: Tsqlite3_result_text;
    sqlite3_result_text16: Tsqlite3_result_text16;
    sqlite3_result_text16le: Tsqlite3_result_text16le;
    sqlite3_result_text16be: Tsqlite3_result_text16be;
    sqlite3_result_value: Tsqlite3_result_value;
    sqlite3_result_zeroblob: Tsqlite3_result_zeroblob;
    sqlite3_value_blob: Tsqlite3_value_blob;
    sqlite3_value_bytes: Tsqlite3_value_bytes;
    sqlite3_value_bytes16: Tsqlite3_value_bytes16;
    sqlite3_value_double: Tsqlite3_value_double;
    sqlite3_value_int: Tsqlite3_value_int;
    sqlite3_value_int64: Tsqlite3_value_int64;
    sqlite3_value_text: Tsqlite3_value_text;
    sqlite3_value_text16: Tsqlite3_value_text16;
    sqlite3_value_type: Tsqlite3_value_type;
    sqlite3_user_data: Tsqlite3_user_data;
    sqlite3_libversion: Tsqlite3_libversion;
    sqlite3_libversion_number: Tsqlite3_libversion_number;
    sqlite3_create_collation: Tsqlite3_create_collation;
    sqlite3_create_collation16: Tsqlite3_create_collation16;
    sqlite3_create_function: Tsqlite3_create_function;
    sqlite3_create_function16: Tsqlite3_create_function16;
    sqlite3_overload_function: Tsqlite3_overload_function;
    sqlite3_create_module: Tsqlite3_create_module;
    sqlite3_create_module_v2: Tsqlite3_create_module_v2;
    sqlite3_declare_vtab: Tsqlite3_declare_vtab;
    sqlite3_vtab_config: Tsqlite3_vtab_config;
    sqlite3_enable_shared_cache: Tsqlite3_enable_shared_cache;
    sqlite3_enable_load_extension: Tsqlite3_enable_load_extension;
    sqlite3_busy_timeout: Tsqlite3_busy_timeout;
    sqlite3_busy_handler: Tsqlite3_busy_handler;
    sqlite3_key: Tsqlite3_key;
    sqlite3_key_v2: Tsqlite3_key_v2;
    sqlite3_rekey: Tsqlite3_rekey;
    sqlite3_rekey_v2: Tsqlite3_rekey_v2;
    sqlite3_backup_init: Tsqlite3_backup_init;
    sqlite3_backup_step: Tsqlite3_backup_step;
    sqlite3_backup_finish: Tsqlite3_backup_finish;
    sqlite3_backup_remaining: Tsqlite3_backup_remaining;
    sqlite3_backup_pagecount: Tsqlite3_backup_pagecount;
    sqlite3_db_release_memory: Tsqlite3_db_release_memory;
    sqlite3_db_readonly: Tsqlite3_db_readonly;
    sqlite3_limit: Tsqlite3_limit;
    sqlite3_uri_parameter: Tsqlite3_uri_parameter;
    sqlite3_interrupt: Tsqlite3_interrupt;

    constructor Create;
    destructor Destroy; override;

    procedure Initialize;
    procedure UnInitialize;

    procedure GetLiteErrorCode(SQLite: pSQLite3; var ErrorCode: integer);
    procedure GetLiteErrorMsg(SQLite: pSQLite3; var ErrorMsg: string);
    procedure GetPredefinedErrorMsg(ErrorCode: integer; var ErrorMsg: string);
    function IsMetaDataAPIAvailable: boolean;

    function GetProc(const Name: string; NotLinkPtr: IntPtr): IntPtr; overload;
    function GetProc(const Name: string): IntPtr; overload;

    procedure Assign(Source: TCustomSQLite3API); virtual;

    property ClientLibrary: string read FClientLibrary write FClientLibrary;
    property Initialized: boolean read FInitialized;
    property Direct: boolean read FDirect write FDirect;
  end;

  TSQLite3API = class (TCustomSQLite3API)
  public
    SQLite: pSQLite3;

    procedure Assign(Source: TCustomSQLite3API); override;

    procedure GetLiteErrorCode(var ErrorCode: integer);
    procedure GetLiteErrorMsg(var ErrorMsg: string);
  end;

var
  LockInit: TCriticalSection;

implementation

uses
{$IFNDEF NOSTATIC}
{$IFDEF VIRTUAL_QUERY}
  LiteStaticCallVirtual,
{$ELSE}
{$IFNDEF UNIDACPRO}
  LiteStaticCall,
{$ELSE}
  LiteStaticCallUni,
{$ENDIF}
{$ENDIF}
{$ENDIF}
  CRFunctions;

